--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/koa": "^2.13.3",
     "@types/koa-bodyparser": "^4.3.1",
     "@types/koa-router": "^7.4.2",
+    "axios": "^0.21.2",
     "dotenv": "^10.0.0",
     "elastic-apm-node": "^3.15.0",
     "koa": "^2.13.1",
@@ -46,6 +47,7 @@
     "supertest": "^6.1.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/elastic-apm-node": "^2.7.0",
     "@types/eslint": "^7.28.0",
