Updated env and fixed duplicate imports

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,8 @@ REST_PORT=3001
 LOGSTASH_URL=
 FORWARD_REQUEST=false
 FORWARD_URL=
+
+NUXEO_AUTH=
+NUXEO_HOST=
+NUXEO_FOLDER_PATH=
+NUXEO_FOLDER_ID=
