Add Sybrin request when CMS receives a request

--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,10 @@ REST_PORT=3001
 LOGSTASH_URL=
 FORWARD_REQUEST=false
 FORWARD_URL=
+SYBRIN_BASE_URL=/Sybrin.Core.API/api
+SYBRIN_USERNAME=
+SYBRIN_PASSWORD=
+SYBRIN_ENVIRONMENT_ID=
 
 NUXEO_AUTH=
 NUXEO_HOST=
