--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "scripts": {
     "build": "tsc --project tsconfig.json",
-    "start": "node build/index",
+    "start": "node build/index.js",
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "dev:debug": "ts-node-dev --transpile-only --respawn --inspect=4321 --project tsconfig.json ./src/index.ts",
     "fix": "npm run fix:prettier && npm run fix:eslint",
@@ -26,11 +26,7 @@
     "fix:prettier": "prettier --write \"**/*.ts\"",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint \"**/*.ts\"",
-    "lint:prettier": "prettier --check \"**/*.ts\"",
-    "test": "jest --config=jest.config.ts --coverage",
-    "test:watch": "jest --config=jest.config.ts --watch",
-    "test:unit": "npm run test ./src",
-    "test:integration": "npm run test ./src --detectOpenHandles"
+    "lint:prettier": "prettier --check \"**/*.ts\""
   },
   "dependencies": {
     "@log4js-node/logstash-http": "^1.1.0",
@@ -44,7 +40,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "log4js": "^6.4.0",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "tslib": "^2.6.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -53,7 +50,6 @@
     "@types/eslint": "^7.28.0",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/jest": "^26.0.24",
     "@types/koa": "^2.13.3",
     "@types/koa-bodyparser": "^4.3.1",
     "@types/log4js": "^2.3.5",
@@ -82,7 +78,6 @@
     "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
-    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6",
     "typedoc": "^0.23.15",
