--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint:prettier": "prettier --check \"**/*.ts\""
   },
   "dependencies": {
+    "@frmscoe/frms-coe-startup-lib": "^0.0.13",
     "@log4js-node/logstash-http": "^1.1.0",
     "@types/koa": "^2.13.3",
     "@types/koa-bodyparser": "^4.3.1",
