--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "fix:prettier": "prettier --write \"**/*.ts\"",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint \"**/*.ts\"",
-    "lint:prettier": "prettier --check \"**/*.ts\""
+    "lint:prettier": "prettier --check \"**/*.ts\"",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "@frmscoe/frms-coe-startup-lib": "^0.0.13",
