--- a/.env.template
+++ b/.env.template
@@ -20,3 +20,13 @@ NUXEO_HOST=
 NUXEO_FOLDER_PATH=
 NUXEO_FOLDER_ID=
 NUEXO_REPORT=false
+
+# Nats
+STARTUP_TYPE=nats
+SERVER_URL=0.0.0.0:4222
+PRODUCER_STREAM=
+CONSUMER_STREAM=CMS
+STREAM_SUBJECT=CMS
+ACK_POLICY=Explicit
+PRODUCER_STORAGE=File
+PRODUCER_RETENTION_POLICY=Workqueue
