--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: cms-service-rel-1-0-0
-          image: actio.azurecr.io/cms-service-rel-1-0-0:1.0.0
+          image: example.io/cms-service-rel-1-0-0:1.0.0
           ports:
             - name: http
               containerPort: 8080
